<resources>
    <string name="app_name">Movies lib</string>
    <string name="add">Add a movie</string>
    <string name="scan">Scan a barcode</string>
    <string name="search_by_title">Search a movie by title</string>
    <string name="search_by_scan">Add movies by barcode</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="barcode_preview">Barcode preview</string>
    <string name="add_wish_list">Add to wish list</string>
    <string name="search_menu">Search</string>
    <string name="menu_title">Collected</string>
    <string name="remove_collection">Remove from collection</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="movie_poster">Movie poster</string>
    <string name="year">Year:\u0020</string>
    <string name="edition">Edition:\u0020</string>
    <string name="add_collection">Add to collection</string>
    <string name="back_button">Back button</string>
    <string name="voice_search">Voice search</string>
    <string name="search">Search</string>
    <string name="search_hint">Search movies</string>
    <string name="no_results_search_title">No results for this search query</string>
    <string name="no_result_search_barcode">No results for this barcode \'%s\'</string>
    <string name="no_query_search_title">Search something to get results</string>
    <string name="collected_empty_state">This list contains all the movies that you physically own. To add items use the + button or buttons below.</string>
    <string name="get_started">Get started</string>
    <string name="scan_barcode">Scan barcodes</string>
    <string name="search_title">Search by title</string>
    <string name="no_result_scan">Scan a barcode to add movies</string>
    <string name="already_scanned">\'%s\' barcode already scanned</string>
    <string name="wrong_format">This barcode is in a wrong format</string>
</resources>
