<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sixfingers.filmo.SearchByInputActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_back_black_48dp"
                android:contentDescription="@string/back_button"
                style="?android:attr/borderlessButtonStyle" />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textNoSuggestions"
                android:layout_weight="1"
                android:hint="@string/search" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_voice_black_48dp"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/voice_search" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
