<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MovieListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/movie_list" />
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/empty_info_margin"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:layout_marginBottom="@dimen/card_actions_padding"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/collected_empty_state"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:layout_marginBottom="@dimen/card_primary_text_bottom_padding"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_barcode"
                    android:onClick="startSearchByScan"
                    style="@style/Widget.AppCompat.Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_title"
                    android:onClick="startSearchByTitle"
                    style="@style/Widget.AppCompat.Button" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.sixfingers.ui.floatingactionmenu.FloatingActionMenu
        android:id="@+id/FAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
        app:main_icon="@drawable/ic_add_white_48dp"
        app:direction="start"
        app:hide_anim="@anim/fab_header_close"
        app:show_anim="@anim/fab_header_open"
        app:layout_behavior="com.sixfingers.ui.floatingactionmenu.FloatingActionMenu$ScrollAwareFAMBehavior"
        app:top_offset="16dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_menu_item22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera_white_48dp"
            android:clickable="true"
            android:onClick="startSearchByScan"
            app:backgroundTint="@color/colorAccent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_menu_title_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_white_48dp"
            android:clickable="true"
            android:onClick="startSearchByTitle"
            app:backgroundTint="@color/colorAccent" />

    </com.sixfingers.ui.floatingactionmenu.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>
